--- a/config_assist_intent_script.yaml
+++ b/config_assist_intent_script.yaml
@@ -210,7 +210,13 @@ PersonAway:
 
      speech:
        text: "{{state_attr(person, 'friendly_name') }} is {% if states(person) != 'away'%} at {%endif %} {{states(person) }}"
-      
+       
+WashingMachine:
+     speech:
+       text: >
+
+        {{ "The " + (["stupid", "fucking", "overworked", ""] | random) + " washing machine"}}{% if states('sensor.washing_machine_operation_state') == 'Run' %} has {{( ((as_timestamp(states('sensor.washing_machine_remaining_program_time')) |int)  - (as_timestamp(now()))|int)/60 )|int}} minutes left{% else %} is not running {% endif %}
+             
 TestIntent:
     action:
       service: notify.mobile_app_galaxy_watch4_classic_5epz
